# rgbd_lc_slam

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  timing.json  tmp_print_icl_summary.py  traj_est_tum.txt
.github/workflows/: pytest.yml
changelog/: 2026-04-07_loops_more_robust_pgo.md  changelog_template.md  milestone2_pr2_frontend_module.md  milestone3_pr3_tests_ci.md  milestone4_pr4_cli_lib_boundary.md  stage1_v1.0.0_rgbd_slam_loop_pgo.md  v1.0.0.md
configs/: tum_splits.yaml
docs/: BUILD_LOG_COMPRESSED.md
scratch/: tmp_check_icl_lr0.py
scripts/datasets/: download_tum.py
scripts/eval/: collect_pg_loop_metrics.py  extract_mast3r_slam_tum_table.py  plot_gt_baseline_loop_pgo_compare.py  summarize_all_results.py  summarize_icl_results.py
scripts/pipeline/: organize_results.sh  run_stage1_all.sh
scripts/runs/: run_all_icl_nuim.sh  run_all_icl_nuim_evo_baseline.sh  run_all_icl_nuim_pg_loop.sh  run_all_tum_splits.sh  run_all_tum_splits_pg_loop.sh  run_one_tum_pg_se3_highres.sh  run_recommended_pg_loop.sh  run_tum_fr1_mast3r_subset_no_download.sh  run_tum_fr1_mast3r_subset_pg_se3_highres.sh
scripts/viz/: collect_evo_align_plots.py  plot_baseline_vs_pgloop.py  plot_icl_compare.py
src/rgbd_lc_slam/backend/: __init__.py  isam2_backend.py
src/rgbd_lc_slam/cli/: __init__.py  run_sequence.py  run_sequence_pg.py
src/rgbd_lc_slam/eval/: ate_eval_np.py  evo_eval.py  metrics_np.py
tests/: test_frontend_smoke.py  test_keyframe_policy.py  test_loop_orb_fallback.py  test_trajectory_io.py  test_tum_associate.py
(+22 files in other folders)
