[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbd_lc_slam"
version = "0.1.0"
description = "RGB-D SLAM with Open3D frontend, NetVLAD retrieval, SuperPoint+LightGlue loop verification, GTSAM backend."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
